--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=9091
 spring.servlet.multipart.max-file-size=2GB
 spring.servlet.multipart.max-request-size=2GB
+
+spring.kafka.bootstrap-servers=140.118.109.106:9092
+spring.zipkin.sender.type=kafka
+spring.application.name=kafka_producer
+spring.sleuth.sampler.probability=1.0
